--- a/.releaserc
+++ b/.releaserc
@@ -2,4 +2,5 @@ plugins:
   - '@semantic-release/commit-analyzer'
   - '@semantic-release/release-notes-generator'
   - ["@semantic-release/npm", {"npmPublish": false}]
+  - ["@semantic-release/git", {"assets": ["package.json"]}]
   - '@semantic-release/github'
